...
      <CTACard
        icon="add-circle"
        title="Host"
        subtitle="Start a tournament"
        borderColor={Alpha.yellow15}
        iconColor={Colors.opticYellow}
        testID="btn-host-tournament"
        onPress={() => router.push('/tournament/create')}
      />
      <CTACard
        icon="qr-code-outline"
        title="Join"
        subtitle="Enter a code"
        borderColor={Alpha.aqua12}
        iconColor={Colors.aquaGreen}
        testID="btn-join-tournament"
        onPress={() => router.push('/(app)/join')}
      />
...
